--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -4,6 +4,8 @@
 // 
 
 .layout-dashboard {
+	// background-color:rgb(30,30,47);
+
 	.header-control {
 		.ant-scroll-number-only > p.ant-scroll-number-only-unit {
 			height: 18px;
