--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -3,7 +3,7 @@
 // Template's cards styles.
 // 
 .ant-card{
-	background-image: linear-gradient(to right, rgb(39,41,61), rgb(39,41,61), rgb(39,41,61) ) ;
+	// background-image: linear-gradient(to right, rgb(39,41,61), rgb(39,41,61), rgb(39,41,61) ) ;
 }
 .ant-card-body {
     padding: 0px;
