--- a/src/scss/components/_chart.scss
+++ b/src/scss/components/_chart.scss
@@ -6,11 +6,12 @@
 .dashboard-bar-chart {
 	height: 100%;
 	canvas {
-		border-radius: 8px;
+		border-radius: 12px;
 		box-shadow: $shadow-2;
 	}
 	.card-title {
-		margin-top: 24px;
+		margin-top: 16px;
+		margin-left: 16px;
 		h6 {
 			font-weight: $fw-bold;
 			margin-bottom: 0;
@@ -25,10 +26,12 @@
 		}
 	}
 	.card-content {
+		margin-left: 16px;
 		p {
 		}
 	}
 	.card-footer {
+		margin-left: 16px;
 		h4 {
 			font-weight: $fw-bold;
 			margin-bottom: 0;
